--- a/styles/scss/partials/_header.scss
+++ b/styles/scss/partials/_header.scss
@@ -124,7 +124,7 @@
 
   // Hide user dropdown in mobile nav (we use separate mobile menu instead)
   .main-header__nav .user-dropdown {
-    display: none !important;
+    display: none;
   }
 }
 
@@ -134,7 +134,7 @@
   justify-content: flex-start;
   gap: 0.5rem;
   padding: 0.5rem 0.75rem;
-  color: #1e40af;
+  color: #111827;
   border-radius: 0.5rem;
   font-weight: 500;
 }
@@ -304,7 +304,6 @@
   transform: rotate(-45deg) translate(7px, -7px);
 }
 
-// Mobile User Menu (separate from nav)
 .mobile-user-menu {
   display: none;
 }
